--- a/views/client/pages/topics/index.pug
+++ b/views/client/pages/topics/index.pug
@@ -1,9 +1,6 @@
 
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Topics
-    body 
-        h3 List song
+extends ../../layouts/default.pug
+
+//- block main
+//-     p.text-xl Hello mn !
+//-     button.p-6.border.text-red-600 Xin chao
