config base ui for webapp

--- a/views/client/partials/sider.pug
+++ b/views/client/partials/sider.pug
@@ -1,3 +1,32 @@
 
-div(class="bg-black h-[100px]")
-    h3 Sider
+aside.bg-black.p-8.flex-none(style="width: 10%")
+    nav
+    ul
+        li.mb-6
+            a.text-xl.font-bold(href="#") 
+                <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+
+        li.mb-4
+            a.text-lg(href="#") Radio
+        li.mb-4
+            a.text-lg(href="#") Podcasts
+        li.mb-4
+            a.text-lg(href="#") Books
+    h3.mt-8.text-sm.uppercase.text-gray-400 My music
+    ul.mt-4
+        li.mb-4
+            a.text-lg(href="#") Tracks
+        li.mb-4
+            a.text-lg(href="#") Albums
+        li.mb-4
+            a.text-lg(href="#") Artists
+        li.mb-4
+            a.text-lg(href="#") Playlists
+        li.mb-4
+            a.text-lg(href="#") Files
+    .mt-auto
+        ul.mt-8
+            li.mb-4
+                a.text-lg(href="#") Setting
+            li.mb-4
+                a.text-lg(href="#") Log out
