config mongodb with cloud

--- a/views/client/partials/sider.pug
+++ b/views/client/partials/sider.pug
@@ -1,5 +1,5 @@
 
-aside.bg-black.p-8.flex-none(style="width: 10%")
+aside.bg-black.p-4.flex-none.pt-10(style="width: 10%")
     nav
     ul
         li.mb-6
