--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -13,10 +13,10 @@ block main
             <i class="fa-solid fa-play mr-2"></i>
             p Listen now
 
-    // Playlists for you
+    // Playlist for you
     
     div.flex.justify-between.mt-10
-        h2.text-xl.font-semibold Playlists for you
+        h2.text-xl.font-semibold Playlist for you
         a(href="") View all
     div(class="mt-4 grid grid-cols-2 sm:grid-cols-4 md:grid-cols-6 gap-4")
         .bg-gray-800.p-4.rounded-lg
@@ -28,19 +28,19 @@ block main
             h3.mt-2.text-lg Some nights
             p.text-sm 37 tracks
         .bg-gray-800.p-4.rounded-lg
-            img(src="./client/img/dreamscapes.png" alt="Playlist of the day" class="w-full rounded-md")
+            img(src="./client/img/dreamscapes.png" alt="genre of the day" class="w-full rounded-md")
             h3.mt-2.text-lg Dreamscape
             p.text-sm 28 tracks
         .bg-gray-800.p-4.rounded-lg
-            img(src="./client/img/coding.png" alt="Playlist of the day" class="w-full rounded-md")
+            img(src="./client/img/coding.png" alt="genre of the day" class="w-full rounded-md")
             h3.mt-2.text-lg Coding list
             p.text-sm 28 tracks
         .bg-gray-800.p-4.rounded-lg
-            img(src="./client/img/logimeditation.png" alt="Playlist of the day" class="w-full rounded-md")
+            img(src="./client/img/logimeditation.png" alt="genre of the day" class="w-full rounded-md")
             h3.mt-2.text-lg Lofi meditation
             p.text-sm 28 tracks
         .bg-gray-800.p-4.rounded-lg
-            img(src="./client/img/tsunami.png" alt="Playlist of the day" class="w-full rounded-md")
+            img(src="./client/img/tsunami.png" alt="genre of the day" class="w-full rounded-md")
             h3.mt-2.text-lg Susurrations
             p.text-sm 28 tracks
 
