--- a/views/client/partials/sider.pug
+++ b/views/client/partials/sider.pug
@@ -7,7 +7,9 @@ aside.bg-black.p-4.flex-none.pt-10(style="width: 10%")
                 <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
 
         li.mb-4
-            a.text-lg(href="#") Radio
+            a.text-lg(href="/") Home
+        li.mb-4
+            a.text-lg(href="/topics") Topics
         li.mb-4
             a.text-lg(href="#") Podcasts
         li.mb-4
@@ -21,7 +23,7 @@ aside.bg-black.p-4.flex-none.pt-10(style="width: 10%")
         li.mb-4
             a.text-lg(href="#") Artists
         li.mb-4
-            a.text-lg(href="#") Playlists
+            a.text-lg(href="#") Genres
         li.mb-4
             a.text-lg(href="#") Files
     .mt-auto
