--- a/public/client/css/output.css
+++ b/public/client/css/output.css
@@ -585,6 +585,21 @@ body{
   top: 0px;
 }
 
+.my-1{
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.mx-4{
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 .mb-2{
   margin-bottom: 0.5rem;
 }
@@ -599,6 +614,10 @@ body{
 
 .mb-8{
   margin-bottom: 2rem;
+}
+
+.ml-2{
+  margin-left: 0.5rem;
 }
 
 .ml-4{
@@ -633,6 +652,20 @@ body{
   margin-top: auto;
 }
 
+.line-clamp-1{
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
+.line-clamp-3{
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+
 .block{
   display: block;
 }
@@ -645,6 +678,14 @@ body{
   display: grid;
 }
 
+.aspect-square{
+  aspect-ratio: 1 / 1;
+}
+
+.aspect-video{
+  aspect-ratio: 16 / 9;
+}
+
 .h-10{
   height: 2.5rem;
 }
@@ -653,8 +694,24 @@ body{
   height: 15rem;
 }
 
+.h-\[120px\]{
+  height: 120px;
+}
+
+.h-\[24px\]{
+  height: 24px;
+}
+
+.h-\[38px\]{
+  height: 38px;
+}
+
 .h-\[40px\]{
   height: 40px;
+}
+
+.h-\[60px\]{
+  height: 60px;
 }
 
 .h-full{
@@ -665,16 +722,64 @@ body{
   height: 100vh;
 }
 
+.h-\[\]{
+  height: ;
+}
+
+.h-\[44px\]{
+  height: 44px;
+}
+
 .w-10{
   width: 2.5rem;
+}
+
+.w-\[120px\]{
+  width: 120px;
+}
+
+.w-\[24px\]{
+  width: 24px;
+}
+
+.w-\[38px\]{
+  width: 38px;
 }
 
 .w-\[40px\]{
   width: 40px;
 }
 
+.w-\[60px\]{
+  width: 60px;
+}
+
 .w-full{
   width: 100%;
+}
+
+.w-\[\]{
+  width: ;
+}
+
+.w-\[44px\]{
+  width: 44px;
+}
+
+.max-w-\[\]{
+  max-width: ;
+}
+
+.max-w-\[1\]{
+  max-width: 1;
+}
+
+.max-w-\[150px\]{
+  max-width: 150px;
+}
+
+.max-w-\[200px\]{
+  max-width: 200px;
 }
 
 .flex-1{
@@ -729,10 +834,6 @@ body{
   gap: 1.5rem;
 }
 
-.gap-2{
-  gap: 0.5rem;
-}
-
 .space-x-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
@@ -745,6 +846,12 @@ body{
 
 .overflow-y-auto{
   overflow-y: auto;
+}
+
+.truncate{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .rounded-2xl{
@@ -767,14 +874,12 @@ body{
   border-radius: 0.375rem;
 }
 
-.rounded-s-\[20px\]{
-  border-start-start-radius: 20px;
-  border-end-start-radius: 20px;
+.rounded-xl{
+  border-radius: 0.75rem;
 }
 
-.rounded-t-lg{
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .rounded-b-lg{
@@ -782,12 +887,13 @@ body{
   border-bottom-left-radius: 0.5rem;
 }
 
-.rounded-br-\[20px\]{
-  border-bottom-right-radius: 20px;
+.rounded-t-lg{
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 
-.rounded-tr-\[20px\]{
-  border-top-right-radius: 20px;
+.border{
+  border-width: 1px;
 }
 
 .border-b{
@@ -798,9 +904,19 @@ body{
   border-left-width: 1px;
 }
 
+.border-gray-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+
 .border-gray-800{
   --tw-border-opacity: 1;
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
+}
+
+.border-slate-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(148 163 184 / var(--tw-border-opacity));
 }
 
 .bg-\[\#1f1f1f\]{
@@ -837,6 +953,41 @@ body{
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-violet-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(124 58 237 / var(--tw-bg-opacity));
+}
+
+.bg-violet-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(91 33 182 / var(--tw-bg-opacity));
+}
+
+.bg-gray-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
+.bg-gray-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.bg-gray-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.bg-gray-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.bg-gray-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-b{
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -855,6 +1006,11 @@ body{
   background-position: bottom;
 }
 
+.object-contain{
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -862,6 +1018,10 @@ body{
 
 .p-2{
   padding: 0.5rem;
+}
+
+.p-3{
+  padding: 0.75rem;
 }
 
 .p-4{
@@ -876,6 +1036,16 @@ body{
   padding: 2rem;
 }
 
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
@@ -884,6 +1054,16 @@ body{
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pt-10{
@@ -902,6 +1082,11 @@ body{
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-lg{
@@ -941,19 +1126,33 @@ body{
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-gray-600{
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-gray-900{
+.text-gray-700{
   --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .text-gray-300{
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.underline-offset-2{
+  text-underline-offset: 2px;
 }
 
 .opacity-40{
@@ -963,6 +1162,20 @@ body{
 .outline-none{
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.line-clamp-1{
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
+.line-clamp-3{
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
 
 /* Hide scrollbar for Chrome, Safari, and Opera */
@@ -978,6 +1191,14 @@ body{
   /* IE and Edge */
   scrollbar-width: none;
   /* Firefox */
+}
+
+.hover\:underline:hover{
+  text-decoration-line: underline;
+}
+
+.hover\:underline-offset-2:hover{
+  text-underline-offset: 2px;
 }
 
 @media (min-width: 640px){
@@ -1007,11 +1228,15 @@ body{
     grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
-  .md\:grid-cols-5{
-    grid-template-columns: repeat(5, minmax(0, 1fr));
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .md\:p-8{
-    padding: 2rem;
+  .md\:p-6{
+    padding: 1.5rem;
+  }
+
+  .md\:pt-8{
+    padding-top: 2rem;
   }
 }
