--- a/views/client/partials/main-content.pug
+++ b/views/client/partials/main-content.pug
@@ -1,5 +1,5 @@
 
-main(class="bg-[#1f1f1f] p-4 md:p-8 flex-grow overflow-y-auto rounded-s-[20px] no-scrollbar" style="width: 70%")
+main(class="bg-[#1f1f1f] p-3 md:p-6 md:pt-8 flex-grow overflow-y-auto rounded-[20px] no-scrollbar mr-4" style="width: 70%")
     .flex.items-center.justify-between.border-b
         i.fa.fa-search.mr-2(style="color: #ffffff;")
         input(type="text" placeholder="Search" class="bg-bottom rounded-[20px] bg-[#1f1f1f] px-4 py-2 text-white flex-1 outline-none")
