--- a/views/client/partials/playing.pug
+++ b/views/client/partials/playing.pug
@@ -1,9 +1,10 @@
 
 // Now Playing Section
-div(class="bg-gray-900 p-8 border-l border-gray-800 flex flex-col justify-between rounded-tr-[20px] rounded-br-[20px] " style="width: 30%")
-    div.flex.w-full.justify-end.items-center.mb-8
+div(class="bg-gray-900 p-8 border-l border-gray-800 rounded-[20px] rounded-[20px] " style="width: 30%")
+    div.flex.w-full.justify-end.items-center.mb-6
         p.mr-4.font-semibold Nejavu E.
         div(class="w-[40px] h-[40px] rounded-full")
             img(src="https://res.cloudinary.com/dswmkjagw/image/upload/v1727791247/home_pb6lx9.jpg" alt="you" class="rounded-full object-cover")
     
     block detail
+
