--- a/public/client/css/output.css
+++ b/public/client/css/output.css
@@ -595,11 +595,6 @@ body{
   margin-bottom: 1rem;
 }
 
-.mx-4{
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
 .mb-2{
   margin-bottom: 0.5rem;
 }
@@ -678,10 +673,6 @@ body{
   display: grid;
 }
 
-.aspect-square{
-  aspect-ratio: 1 / 1;
-}
-
 .aspect-video{
   aspect-ratio: 16 / 9;
 }
@@ -710,6 +701,10 @@ body{
   height: 40px;
 }
 
+.h-\[44px\]{
+  height: 44px;
+}
+
 .h-\[60px\]{
   height: 60px;
 }
@@ -720,14 +715,6 @@ body{
 
 .h-screen{
   height: 100vh;
-}
-
-.h-\[\]{
-  height: ;
-}
-
-.h-\[44px\]{
-  height: 44px;
 }
 
 .w-10{
@@ -750,36 +737,20 @@ body{
   width: 40px;
 }
 
-.w-\[60px\]{
-  width: 60px;
-}
-
-.w-full{
-  width: 100%;
-}
-
-.w-\[\]{
-  width: ;
-}
-
 .w-\[44px\]{
   width: 44px;
 }
 
-.max-w-\[\]{
-  max-width: ;
+.w-\[60px\]{
+  width: 60px;
 }
 
-.max-w-\[1\]{
-  max-width: 1;
+.w-auto{
+  width: auto;
 }
 
-.max-w-\[150px\]{
-  max-width: 150px;
-}
-
-.max-w-\[200px\]{
-  max-width: 200px;
+.w-full{
+  width: 100%;
 }
 
 .flex-1{
@@ -804,10 +775,6 @@ body{
 
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.flex-col{
-  flex-direction: column;
 }
 
 .items-center{
@@ -848,10 +815,8 @@ body{
   overflow-y: auto;
 }
 
-.truncate{
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .rounded-2xl{
@@ -876,10 +841,6 @@ body{
 
 .rounded-xl{
   border-radius: 0.75rem;
-}
-
-.rounded{
-  border-radius: 0.25rem;
 }
 
 .rounded-b-lg{
@@ -929,6 +890,11 @@ body{
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-gray-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
 .bg-gray-800{
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
@@ -951,41 +917,6 @@ body{
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-violet-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(124 58 237 / var(--tw-bg-opacity));
-}
-
-.bg-violet-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(91 33 182 / var(--tw-bg-opacity));
-}
-
-.bg-gray-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
-.bg-gray-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
-.bg-gray-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
-.bg-gray-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
-
-.bg-gray-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b{
@@ -1056,14 +987,14 @@ body{
   padding-bottom: 0.5rem;
 }
 
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pt-10{
@@ -1141,20 +1072,6 @@ body{
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-gray-700{
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.text-gray-300{
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
-.underline-offset-2{
-  text-underline-offset: 2px;
-}
-
 .opacity-40{
   opacity: 0.4;
 }
@@ -1197,10 +1114,6 @@ body{
   text-decoration-line: underline;
 }
 
-.hover\:underline-offset-2:hover{
-  text-underline-offset: 2px;
-}
-
 @media (min-width: 640px){
   .sm\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1226,10 +1139,6 @@ body{
 
   .md\:grid-cols-6{
     grid-template-columns: repeat(6, minmax(0, 1fr));
-  }
-
-  .md\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:p-6{
