--- a/views/client/pages/playlist/detail.pug
+++ b/views/client/pages/playlist/detail.pug
@@ -7,7 +7,7 @@ block main
         div(class="w-[120px] h-[120px] overflow-hidden mr-4")
             img(src=genre.thumbnail, alt="" class="object-contain w-full")
         .flex-noneborder-grey-900
-            p postcard
+            p podcast
             h2.text-5xl.my-1= genre.title
             p.mt-2= genre.title.toLowerCase()
     div.flex.mb-4
@@ -68,7 +68,7 @@ block detail
             i(class="fa-solid fa-plus")
     
     div.p-2.bg-gray-700.rounded-lg.py-3
-        p.text-lg.mb-2 About the postcard
+        p.text-lg.mb-2 About the podcast
         p(class="line-clamp-3 text-sm text-gray-400") Our mission is make you smarter, faster. Listen to interview with the worlds biggest thinker in science, philosophy, bussiness and more. Bigthink is the leading...
     
     div.flex.justify-between.mt-4.mb-8
