--- a/views/client/pages/category/list.pug
+++ b/views/client/pages/category/list.pug
@@ -3,17 +3,18 @@
 extends ../../layouts/default.pug
 
 block main
-  div(class="bg-gradient-to-b from-purple-800 to-black p-6 rounded-t-lg rounded-b-lg mt-4")
-    h1.text-3xl.font-bold.text-white= pageTitle
+  div(class="bg-gradient-to-b from-purple-800 to-teal-500 p-6 rounded-t-lg rounded-b-lg mt-4")
+    h1.text-3xl.font-semibold.text-white= pageTitle
     div.text-white.mt-4.text-xl Discover new
 
   div.flex.justify-between.mt-10
-    h2.text-xl.font-semibold genres for you
+    h2.text-xl.font-semibold Categories
     a(href="") View all
   div(class="mt-4 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4")
     each item in categories
+      
       a(href=`/genre/sub/${item.title}/${item._id}`).bg-gray-800.rounded-lg.cursor-pointer
         img(src=item.thumbnail alt=item.title class="w-full rounded-md")
     
-        
+  
 block detail
