--- a/views/client/pages/genre/index.pug
+++ b/views/client/pages/genre/index.pug
@@ -8,8 +8,17 @@ block main
         a(href="") View all
     div(class="mt-4 grid grid-cols-2 sm:grid-cols-4 md:grid-cols-6 gap-4")
         each item in genres
-            a(href=`/playlist/${item.id}`).bg-gray-800.p-2.rounded-lg.cursor-pointer
-                img(src=item.thumbnail alt="Dejavu" class="w-full rounded-md")
-                h3.mt-2.text-md= item.title
-                p.text-sm.text-gray-400= item.author
+            if (item.genre == "song")
+                a(href=`/song/${item.title}/${item.id}`).bg-gray-800.p-2.rounded-lg.cursor-pointer
+                    img(src=item.thumbnail alt="" class="w-full rounded-md")
+                    h3.mt-2.text-md= item.title
+                    p.text-sm.text-gray-400= item.author
+            else
+                a(href=`/playlist/${item.id}`).bg-gray-800.p-2.rounded-lg.cursor-pointer
+                    img(src=item.thumbnail alt="" class="w-full rounded-md")
+                    h3.mt-2.text-md= item.title
+                    p.text-sm.text-gray-400= item.author
+    div.flex.justify-between.mt-10
+        h2.text-xl.font-semibold Hand-picked playlist
+        a(href="") View all
 block detail
