--- a/views/client/pages/genre/index.pug
+++ b/views/client/pages/genre/index.pug
@@ -9,7 +9,7 @@ block main
     div(class="mt-4 grid grid-cols-2 sm:grid-cols-4 md:grid-cols-6 gap-4")
         each item in genres
             if (item.genre == "song")
-                a(href=`/song/${item.title}/${item.id}`).bg-gray-800.p-2.rounded-lg.cursor-pointer
+                a(href=`/song/${item.title}/${item.songID}`).bg-gray-800.p-2.rounded-lg.cursor-pointer
                     img(src=item.thumbnail alt="" class="w-full rounded-md")
                     h3.mt-2.text-md= item.title
                     p.text-sm.text-gray-400= item.author
