--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -12,7 +12,8 @@ html
         include ../partials/sider.pug
 
         include ../partials/main-content.pug
-            
+        
         include ../partials/playing.pug
 
-        
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js" type="module")
+        script(src="/client/js/script.js" type="module") 
