--- a/views/client/pages/song/detail.pug
+++ b/views/client/pages/song/detail.pug
@@ -6,7 +6,7 @@ block main
     div(class="flex py-4 bg-gradient-to-b from-grey-400 to-black items-center")
         div(class="w-[120px] h-[120px] overflow-hidden mr-4")
             img(src=song.thumbnail, alt="" class="object-contain w-full")
-        .flex-noneborder-grey-900
+        .flex-none.border-grey-900
             p Single
             h2.text-5xl.my-1= song.title
             p.mt-2.text-sm.font-semibold= singer.name + " - " + song.duration
@@ -18,16 +18,18 @@ block main
             i(class="fa-solid fa-plus" style=`color: #D3D3D3;`)
         button(class="w-[30px] h-[30px] border-gray-400 rounded-full border border-2 text-sm text-center")
             <i class="fa-solid fa-shuffle" style="color: #D3D3D3;"></i>
+        a(href=`/song/like/${song.id}?_method=POST` class="w-[30px] h-[30px] border-gray-400 rounded-full border border-2 text-sm flex items-center justify-center text-center")
+            <i class="fa-solid fa-heart" style="color: #ffffff;"></i>
         
         button(class="w-[30px] h-[30px] border-gray-400 rounded-full text-sm text-center")
             <i class="fa-solid fa-ellipsis" style="color: #D3D3D3;"></i>
         
-        button(class="w-[44px] h-[44px] rounded-full text-center", style=`background-color: #4A148C;`)
+        button(id="play-button" class="w-[44px] h-[44px] rounded-full text-center", style=`background-color: #4A148C;`)
             i(class="fa-solid fa-play", style=`color: #ffffff;`)
 
                 
     // list episode or songs
-    table.w-full.text-left
+    table.w-full.text-left.mb-4
         thead
             tr.border-b.border-gray-500
                 th(class="w-1/12 px-4 py-2 text-left") <i class="fa-solid fa-hashtag" style="color: #fcfcfc;"></i>
@@ -35,12 +37,12 @@ block main
                 th(class="w-3/12 px-4 py-2 text-left") Plays
                 th(class="w-2/12 px-4 py-2 text-left") <i class="fa-regular fa-clock" style="color: #ffffff;"></i> Duration
         tbody
-            tr.border-b.border-gray-500
+            tr(class="hover:bg-gray-800 cursor-pointer" onClick=`window.location.href='/song/${song.id}'`)
                 td(class="w-1/12 px-4 py-2 text-left") 1
                 td(class="w-6/12 px-4 py-2 text-left")
                     p= song.title 
                     p= singer.name
-                td(class="w-3/12 px-4 py-2 text-left")= song.plays
+                td(class="w-3/12 px-4 py-2 text-left")= song.plays.toLocaleString('en-US')
                 td(class="w-2/12 px-4 py-2 text-left")= song.duration
             
             // each item in songRelate
@@ -49,6 +51,8 @@ block main
             //         td.w-6/12.px-4.py-2.text-left= item.play
             //         td.w-2/12.px-4.py-2.text-left= item.duration
         
+
+    p.text-2xl.mt-2 More by #{singer.name}
     hr.border-gray-400.my-4
 
 
