--- a/public/client/css/output.css
+++ b/public/client/css/output.css
@@ -581,12 +581,20 @@ body{
   position: sticky;
 }
 
+.bottom-0{
+  bottom: 0px;
+}
+
 .bottom-4{
   bottom: 1rem;
 }
 
 .left-0{
   left: 0px;
+}
+
+.left-4{
+  left: 1rem;
 }
 
 .top-0{
@@ -597,16 +605,9 @@ body{
   top: 1rem;
 }
 
-.left-4{
-  left: 1rem;
-}
-
-.z-10{
-  z-index: 10;
-}
-
-.z-20{
-  z-index: 20;
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .my-1{
@@ -647,6 +648,10 @@ body{
   margin-right: 0.5rem;
 }
 
+.mr-3{
+  margin-right: 0.75rem;
+}
+
 .mr-4{
   margin-right: 1rem;
 }
@@ -657,6 +662,10 @@ body{
 
 .mt-2{
   margin-top: 0.5rem;
+}
+
+.mt-3{
+  margin-top: 0.75rem;
 }
 
 .mt-4{
@@ -673,10 +682,6 @@ body{
 
 .mt-auto{
   margin-top: auto;
-}
-
-.mt-3{
-  margin-top: 0.75rem;
 }
 
 .line-clamp-1{
@@ -709,32 +714,28 @@ body{
   display: grid;
 }
 
-.aspect-video{
-  aspect-ratio: 16 / 9;
-}
-
-.aspect-\[\]{
-  aspect-ratio: ;
-}
-
 .aspect-\[3\/4\]{
   aspect-ratio: 3/4;
 }
 
-.aspect-\[5\/6\]{
-  aspect-ratio: 5/6;
-}
-
-.aspect-\[10\/1\]{
-  aspect-ratio: 10/1;
-}
-
-.aspect-\[10\/12\]{
-  aspect-ratio: 10/12;
+.aspect-video{
+  aspect-ratio: 16 / 9;
 }
 
 .h-10{
   height: 2.5rem;
+}
+
+.h-12{
+  height: 3rem;
+}
+
+.h-2{
+  height: 0.5rem;
+}
+
+.h-3{
+  height: 0.75rem;
 }
 
 .h-60{
@@ -781,16 +782,36 @@ body{
   height: 100vh;
 }
 
-.max-h-\[200px\]{
-  max-height: 200px;
-}
-
 .max-h-\[300px\]{
   max-height: 300px;
 }
 
+.w-1\/12{
+  width: 8.333333%;
+}
+
 .w-10{
   width: 2.5rem;
+}
+
+.w-12{
+  width: 3rem;
+}
+
+.w-2\/12{
+  width: 16.666667%;
+}
+
+.w-24{
+  width: 6rem;
+}
+
+.w-3\/12{
+  width: 25%;
+}
+
+.w-6\/12{
+  width: 50%;
 }
 
 .w-\[120px\]{
@@ -831,22 +852,6 @@ body{
 
 .w-full{
   width: 100%;
-}
-
-.w-1\/12{
-  width: 8.333333%;
-}
-
-.w-2\/12{
-  width: 16.666667%;
-}
-
-.w-3\/12{
-  width: 25%;
-}
-
-.w-6\/12{
-  width: 50%;
 }
 
 .flex-1{
@@ -974,6 +979,11 @@ body{
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
+.border-gray-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
 .border-gray-800{
   --tw-border-opacity: 1;
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
@@ -984,11 +994,6 @@ body{
   border-color: rgb(148 163 184 / var(--tw-border-opacity));
 }
 
-.border-gray-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity));
-}
-
 .bg-\[\#1f1f1f\]{
   --tw-bg-opacity: 1;
   background-color: rgb(31 31 31 / var(--tw-bg-opacity));
@@ -997,6 +1002,11 @@ body{
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-gray-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
 .bg-gray-700{
@@ -1014,6 +1024,11 @@ body{
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
+.bg-slate-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
 .bg-slate-700{
   --tw-bg-opacity: 1;
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
@@ -1026,6 +1041,10 @@ body{
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-10{
+  --tw-bg-opacity: 0.1;
 }
 
 .bg-gradient-to-b{
@@ -1124,6 +1143,10 @@ body{
   padding-top: 2.5rem;
 }
 
+.pb-4{
+  padding-bottom: 1rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -1160,6 +1183,11 @@ body{
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold{
@@ -1241,6 +1269,11 @@ body{
   /* IE and Edge */
   scrollbar-width: none;
   /* Firefox */
+}
+
+.hover\:bg-gray-800:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .hover\:underline:hover{
